<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Popular Movies</string>
    <string name="details_fragment_title">Movie Details</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="details_rating" translatable="false"><xliff:g id="rating">%1.1f</xliff:g>/10</string>

    <!-- Strings for synchronizing adapter -->
    <string name="sync_account_type" translatable="false">popularmovies.dromescu.com</string>
    <string name="content_authority" translatable="false">com.dromescu.popularmovies</string>


    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">sort_option</string>
    <string-array name="pref_sort_option_labels">
        <item>Most Popular</item>
        <!--<item>Most Popular by Highest Rating</item>-->
        <item>Highest Rated by Total votes</item>
        <item>Highest Rated by Average vote</item>
    </string-array>
    <string-array name="pref_sort_option_values">
        <item translatable="false">popularity.desc</item>
        <!--<item>local_sort</item>-->
        <item translatable="false">vote_count.desc</item>
        <item translatable="false">vote_average.desc</item>
    </string-array>
    <string name="pref_sort_option_default" translatable="false">popularity.desc</string>

    <string name="pref_url_movies_picture" translatable="false">http://image.tmdb.org/t/p</string>


    <!-- Empty Weather Database -->
    <string name="empty_movie_list">No Movie Information Available</string>
    <string name="empty_movie_list_no_network">No Movie information available. The network is not available to fetch Movie data.</string>
    <string name="empty_movie_list_server_down">No Movie information available. The server is not returning data.</string>
    <string name="empty_movie_list_server_error">No Movie information available. The server is not returning valid data. Please check for an updated version of Movie.</string>
    <string name="empty_movie_list_invalid_settings">No Movie information available. The settings are not recognized by the Movie server.</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="detail_header_backdrop_content_desc">Movie Backdrop</string>

    <!-- For Detail Cards -->
    <string name="detail_card_rating_label">Rating</string>
    <string name="detail_card_overview_label">Overview</string>
    <string name="detail_card_release_date_label">Release Date</string>
    <string name="detail_card_popularity_label">Popularity</string>
    <string name="detail_card_poster_label">Poster</string>
    <string name="detail_card_movie_poster_content_desc">Movie Poster</string>
    <string name="pref_creator_me">pref_creator_me</string>
    <string name="pref_creator_me_value">Created by Jaison Brooks</string>
    <string name="error_message">There was an Error :/</string>
    <string name="action_search">Action Start Trailer</string>

</resources>
